--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,13 @@
-.remove-btn{
-    cursor: pointer;
-}
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 
-.counter-btns{
-    display: flex;
-    justify-content: center;
-}
-
-.counter-btns button{
-   margin: 0 5px;
-   text-transform: lowercase;
-}
-
-.namecard{
-    text-transform: capitalize;
-}
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
